# orbital-coordination-standard

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  pages-index.html  pyproject.toml
.github/workflows/: pages.yml
api/: README.md  __init__.py  main.py  model_service.py  schemas.py
dashboard/: README.md  app.jsx  index.html  styles.css
data/: README.md
docs/: architecture.md  governance-model.md  implementation-guide.md  references.md  roadmap.md  threat-model.md
examples/messages/: conjunction-alert-reference.valid.json  maneuver-intent.valid.json  post-maneuver-confirmation.valid.json  responsibility-claim.valid.json  state-update.valid.json
examples/scenarios/: two-operator-conjunction.json
models/: README.md  satellite_coordination_dashboard_data.json  satellite_coordination_pressure_metrics.json  satellite_coordination_pressure_model.joblib  satellite_coordination_pressure_predictions.csv
notebook/: README.md  satellite_coordination_ml.ipynb
paper/: computational-extension.md
schemas/: sail-message.schema.json
scripts/: build_dashboard_data.py
sim/: README.md  run_toy_sim.py
spec/: SAIL-0.1.md
src/orbital_coordination_standard/: __init__.py  __main__.py  validator.py
tests/: test_api.py  test_examples.py
